--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>About</title>
+    <title>A-propos</title>
 </head>
 <body>
     <header>
-        <h1>Time-Consuming Games</h1>
+        <h1>About us</h1>
         <nav>
             <ul>
                 <li>Jeu 1</li>
@@ -22,12 +22,7 @@
     </header>
     
     <footer>
-        <nav>
-            <ul>
-                <li><a href="#">Retour en haut</a></li>
-                <li><a href="about.html">A propos</a></li>
-            </ul>
-        </nav>
+        
     </footer>
 </body>
 </html>
