--- a/speed-typing.html
+++ b/speed-typing.html
@@ -12,8 +12,10 @@
 
     </header>
 
-    <label for="answer"></label>
-    <textarea id="answer" name="answer" rows="10" cols="50"></textarea>
+    <div id="answer">
+        <label for=""></label>
+        <textarea id="" name="" rows="10" cols="100"></textarea>
+    </div>
 
     <footer>
 
