--- a/speed-typing.html
+++ b/speed-typing.html
@@ -11,14 +11,21 @@
     <header>
 
     </header>
-
-    <div id="answer">
+    <p>Type the text speed as possible.</p>
+    <form>
         <label for=""></label>
         <textarea id="" name="" rows="10" cols="100"></textarea>
-    </div>
-
+        <br><br>
+        <input type="submit" value="Submit">
+    </form>
+    <p>Click the "Submit" will confirm your answer.</p>
     <footer>
-
+        <nav>
+            <ul>
+                <li><a href="#">Retour en haut</a></li>
+                <li><a href="about.html">A propos</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
