--- a/speed-typing.html
+++ b/speed-typing.html
@@ -11,14 +11,17 @@
     <header>
 
     </header>
-    <p>Type the text speed as possible.</p>
-    <form>
-        <label for=""></label>
-        <textarea id="" name="" rows="10" cols="100"></textarea>
-        <br><br>
-        <input type="submit" value="Submit">
-    </form>
-    <p>Click the "Submit" will confirm your answer.</p>
+    <main>
+        <p>Type the text speed as possible.</p>
+        <form>
+            <label for=""></label>
+            <textarea id="" name="" rows="10" cols="100"></textarea>
+            <br><br>
+            <input type="submit" value="Submit">
+        </form>
+        <p>Click the "Submit" will confirm your answer.</p>
+    </main>
+    <script src="speed-typing.js"></script>
     <footer>
         <nav>
             <ul>
