--- a/speed-typing.html
+++ b/speed-typing.html
@@ -13,6 +13,7 @@
     </header>
     <main>
         <p>Type the text speed as possible.</p>
+        <p id="chosen-text"></p>
         <form>
             <label for=""></label>
             <textarea id="" name="" rows="10" cols="100"></textarea>
