--- a/speed-typing.html
+++ b/speed-typing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +15,14 @@
         <p>Type the text speed as possible.</p>
         <p id="chosen-text"></p>
         <form>
-            <label for=""></label>
-            <textarea id="" name="" rows="10" cols="100"></textarea>
+            <label for="typed-text"></label>
+            <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
             <br><br>
-            <input type="submit" value="Submit">
+            <button type="button" value="Submit" id="submit-button">Submit</button>
         </form>
         <p>Click the "Submit" will confirm your answer.</p>
+        <br><br>
+        <p id="result"></p>
     </main>
     <script src="speed-typing.js"></script>
     <footer>
