add button to speed typing and welcome

--- a/index.html
+++ b/index.html
@@ -9,18 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Time-Consuming Games</h1>
         <nav>
-            <ul>
-                <li>Jeu 1</li>
-                <li>Jeu 2</li>
-                <li>Jeu 3</li>
-                <li>Jeu 4</li>
-                <li>Jeu 5</li>
-            </ul>
+            <p>Welcome to the time-consuming games website !</p>
+            <div id="buttons">
+                <button id="game-button" onclick="window.location.href='speed-typing.html';">Speed Typing</button>
+            </div>
         </nav>
     </header>
-    
     <footer>
         <nav>
             <ul>
