add games directory

--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
                 <li><a href="#">Retour en haut</a></li>
-                <li><a href="about.html">A propos</a></li>
+                <li><a href="../../about.html">A propos</a></li>
             </ul>
         </nav>
     </footer>
