--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <p>Welcome to the time-consuming games website !</p>
             <div id="buttons">
-                <button id="game-button" onclick="window.location.href='speed-typing.html';">Speed Typing</button>
+                <button id="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
             </div>
         </nav>
     </header>
