--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>About</title>
+    <title>Time-Consuming Games</title>
 </head>
 <body>
     <header>
         <nav>
-            <p>Welcome to the time-consuming games website !</p>
+            <h1>Welcome to the time-consuming games website !</h1>
+            <p id="presentation">A website created by Oscar Vilmot and Kylian Sauvee in which you can play time-consuming games to pass the time and have fun.</p>
             <div id="buttons">
-                <button id="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
+                <div class="game">
+                    <button class="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
+                    <p class="game-presentation">Type the text shown as quickly as possible !</p>
+                </div>
+                <div class="game">
+                    <button class="game-button" onclick="window.location.href='games/';">Game 2</button>
+                    <p class="game-presentation">Coming Soon !</p>
+                </div>
+                <div class="game">
+                    <button class="game-button" onclick="window.location.href='games/';">Game 3</button>
+                    <p class="game-presentation">Coming Soon !</p>
+                </div>
             </div>
         </nav>
     </header>
