--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <footer>
         <nav>
             <ul>
-                <li><a href="#">Retour en haut</a></li>
-                <li><a href="about.html">A propos</a></li>
+                <li><a href="#">Go Up</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </footer>
