--- a/form.html
+++ b/form.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="form.css">
+    <title>Game Suggestions</title>
 </head>
 <body>
-
+    <header>
+        <h1>Game Suggestions</h1>
+        <form id="game-suggestions-form">
+            <div class="parent">
+                <label for="title"></label><input type="text" id="title" name="game-title" placeholder="Game Title">
+                <label for="description"></label><input type="text" id="description" name="game-description" placeholder="Game Description">
+                <label for="interest"></label><input type="text" id="interest" name="game-interest" placeholder="Game Interest">
+            </div>
+            <div class="parent">
+                <div>
+                    <button type="button" id="add">Add</button>
+                </div>
+            </div>
+        </form>
+    </header>
 </body>
 </html>
