add suggestions table

--- a/form.html
+++ b/form.html
@@ -23,5 +23,19 @@
             </div>
         </form>
     </header>
+    <main>
+        <table id="game-suggestions">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Interest</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody id="game-suggestions-list">
+            </tbody>
+        </table>
+    </main>
 </body>
 </html>
