restylize submit button

--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-
+        <h1>Speed Typing</h1>
     </header>
     <main>
         <p>Type the text speed as possible.</p>
@@ -21,17 +21,8 @@
             <button type="button" value="Submit" id="submit-button">Submit</button>
         </form>
         <p>Click the "Submit" will confirm your answer.</p>
-        <br><br>
         <p id="result"></p>
     </main>
     <script src="speed-typing.js"></script>
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="#">Retour en haut</a></li>
-                <li><a href="../../about.html">A propos</a></li>
-            </ul>
-        </nav>
-    </footer>
 </body>
 </html>
