Correction du menu principal
Ajustement du flex box

--- a/index.html
+++ b/index.html
@@ -9,31 +9,30 @@
 </head>
 <body>
     <header>
-        <nav>
-            <h1>Welcome to the time-consuming games website !</h1>
-            <p id="presentation">A website created by Oscar Vilmot and Kylian Sauvee in which you can play time-consuming games to pass the time and have fun.</p>
-            <div id="buttons">
-                <div class="game">
-                    <button class="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
-                    <p class="game-presentation">Type the text shown as quickly as possible !</p>
-                </div>
-                <div class="game">
-                    <button class="game-button" onclick="window.location.href='games/';">Game 2</button>
-                    <p class="game-presentation">Coming Soon !</p>
-                </div>
-                <div class="game">
-                    <button class="game-button" onclick="window.location.href='games/';">Game 3</button>
-                    <p class="game-presentation">Coming Soon !</p>
-                </div>
-            </div>
-        </nav>
+        <h1>Welcome to the time-consuming games website !</h1>
+        <p id="presentation">A website created by Oscar Vilmot and Kylian Sauvee in which you can play time-consuming games to pass the time and have fun.</p>
     </header>
+
+    <nav>
+        <div class="game">
+            <button class="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
+            <p class="game-presentation">Type the text shown as quickly as possible !</p>
+        </div>
+        <div class="game">
+            <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';">Game 2</button>
+            <p class="game-presentation">Coming Soon !</p>
+        </div>
+        <div class="game">
+            <button class="game-button" onclick="window.location.href='games/';">Game 3</button>
+            <p class="game-presentation">Coming Soon !</p>
+        </div>
+    </nav>
+
     <footer>
         <nav>
-            <ul>
-                <li><a href="#">Go Up</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </ul>
+            <a href="#">Go Up</a>
+            <a href="index.html">Retour menu</a>
+            <a href="about.html">About Us</a>
         </nav>
     </footer>
 </body>
