Correction de l'index et du CSS "embélisation"

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <p class="game-presentation">Type the text shown as quickly as possible !</p>
         </div>
         <div class="game">
-            <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';">Game 2</button>
-            <p class="game-presentation">Coming Soon !</p>
+            <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';">Find the button</button>
+            <p class="game-presentation">Click the button the most times in 15 seconds !</p>
         </div>
         <div class="game">
             <button class="game-button" onclick="window.location.href='games/';">Game 3</button>
