change index layout

--- a/index.html
+++ b/index.html
@@ -13,18 +13,50 @@
         <p id="presentation">A website created by Oscar Vilmot and Kylian Sauvee in which you can play time-consuming games to pass the time and have fun.</p>
     </header>
 
-    <nav>
+    <nav class="games">
         <div class="game">
-            <button class="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';">Speed Typing</button>
-            <p class="game-presentation">Type the text shown as quickly as possible !</p>
+            <div class="game-title">
+                <p>Speed Typing</p>
+            </div>
+            <div class="game-presentation">
+                <p>Type the text shown as quickly as possible !</p>
+            </div>
+            <div class="game-button-parent">
+                <button class="game-button" onclick="window.location.href='games/speed-typing/speed-typing.html';"><span>Play</span></button>
+            </div>
         </div>
         <div class="game">
-            <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';">Find the button</button>
-            <p class="game-presentation">Click the button the most times in 15 seconds !</p>
+            <div class="game-title">
+                <p>Find The Button</p>
+            </div>
+            <div class="game-presentation">
+                <p>Click the button the most times in 15 seconds !</p>
+            </div>
+            <div class="game-button-parent">
+                <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';"><span>Play</span></button>
+            </div>
         </div>
         <div class="game">
-            <button class="game-button" onclick="window.location.href='games/';">Game 3</button>
-            <p class="game-presentation">Coming Soon !</p>
+            <div class="game-title">
+                <p>Find The Button</p>
+            </div>
+            <div class="game-presentation">
+                <p>Click the button the most times in 15 seconds !</p>
+            </div>
+            <div class="game-button-parent">
+                <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';"><span>Play</span></button>
+            </div>
+        </div>
+        <div class="game">
+            <div class="game-title">
+                <p>Find The Button</p>
+            </div>
+            <div class="game-presentation">
+                <p>Click the button the most times in 15 seconds !</p>
+            </div>
+            <div class="game-button-parent">
+                <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';"><span>Play</span></button>
+            </div>
         </div>
     </nav>
 
