add link to form

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
         </div>
     </nav>
 
+    <main class="suggestions-presentation">
+        <div>
+            <h1>Want to make a game suggestion ?</h1>
+            <div class="game-suggestion-button-parent">
+                <button class="game-suggestion-button" onclick="window.location.href='form.html';"><span>Go</span></button>
+            </div>
+        </div>
+    </main>
+
     <footer>
         <nav>
             <a href="#">Go Up</a>
