change speed typing color

--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Speed Typing</h1>
+        <div>
+            <h1>Speed Typing</h1>
+            <p>Type the text speed as possible.</p>
+            <p id="chosen-text"></p>
+        </div>
     </header>
     <main>
-        <p>Type the text speed as possible.</p>
-        <p id="chosen-text"></p>
         <form>
             <label for="typed-text"></label>
             <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
