add common footer

--- a/about.html
+++ b/about.html
@@ -20,9 +20,12 @@
             </ul>
         </nav>
     </header>
-    
     <footer>
-        
+        <nav>
+            <a href="#">Go Up</a>
+            <a href="index.html">Retour menu</a>
+            <a href="about.html">About Us</a>
+        </nav>
     </footer>
 </body>
 </html>
