--- a/form.html
+++ b/form.html
@@ -37,6 +37,13 @@
             </tbody>
         </table>
     </main>
+    <footer>
+        <nav>
+            <a href="#">Go Up</a>
+            <a href="index.html">Retour menu</a>
+            <a href="about.html">About Us</a>
+        </nav>
+    </footer>
     <script src="form.js"></script>
 </body>
 </html>
