--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -25,6 +25,13 @@
         <p>Click the "Submit" will confirm your answer.</p>
         <p id="result"></p>
     </main>
+    <footer>
+        <nav>
+            <a href="#">Go Up</a>
+            <a href="../../index.html">Retour menu</a>
+            <a href="../../about.html">About Us</a>
+        </nav>
+    </footer>
     <script src="speed-typing.js"></script>
 </body>
 </html>
