modify find the button style

--- a/games/find-the-button/find-the-button.html
+++ b/games/find-the-button/find-the-button.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <p>Find the most button in 15 seconds</p>
+        <div>
+            <h1>Find the most button</h1>
+            <p>Find the most button in 15 seconds</p>
+        </div>
         <p id="minuteur"></p>
         <p id="compteur">Points : 0</p>
     </header>
