--- a/about.html
+++ b/about.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
     <title>A-propos</title>
 </head>
 <body>
     <header>
         <h1>About us</h1>
-        <nav>
-            <ul>
-                <li>Jeu 1</li>
-                <li>Jeu 2</li>
-                <li>Jeu 3</li>
-                <li>Jeu 4</li>
-                <li>Jeu 5</li>
-            </ul>
-        </nav>
     </header>
     <footer>
         <nav>
