--- a/about.html
+++ b/about.html
@@ -11,6 +11,16 @@
     <header>
         <h1>About us</h1>
     </header>
+    <main>
+        <div class="member-1">
+            <div class="member-1-picture">
+                <img src="resources/member-1-picture.jpeg">
+            </div>
+            <div class="member-1-presentation">
+                <p>The male has the upper side wings a brilliant sky blue, with a fine black line round the edge and a white margin. The female is chocolate brown with a few blue scales near the base, and with orange spots, bordered by blue scales, around the edge of the hind wing. The fringes are chequered both sexes. The underside is brownish grey with black and orange crescent spots. The wingspan is about 3 cm (1.2 in).[1] The caterpillar reaches 1.6 centimetres (0.63 in) in length, has a dark green body with dark spines, and yellow bands along the back and sides. </p>
+            </div>
+        </div>
+    </main>
     <footer>
         <nav>
             <a href="#">Go Up</a>
