--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -23,7 +23,7 @@
             <button type="button" value="Submit" id="submit-button">Submit</button>
         </form>
         <p>Click the "Submit" will confirm your answer.</p>
-        <p id="result"></p>
+        <p id="results"></p>
     </main>
     <footer>
         <nav>
