add buttons retry

--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -24,6 +24,8 @@
         </form>
         <p>Click the "Submit" will confirm your answer.</p>
         <p id="results"></p>
+        <button type="button" id="retry"></button>
+        <button type="button" id="retry-same-text"></button>
     </main>
     <footer>
         <nav>
