--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -22,7 +22,7 @@
             <br><br>
             <button type="button" value="Submit" id="submit-button">Submit</button>
         </form>
-        <p>Click the "Submit" will confirm your answer.</p>
+        <p id="submit-description">Click the "Submit" will confirm your answer.</p>
         <p id="results"></p>
         <button type="button" id="retry"></button>
         <button type="button" id="retry-same-text"></button>
