--- a/games/single-pong/single-pong.html
+++ b/games/single-pong/single-pong.html
@@ -2,9 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="single-pong.css">
+    <title>Single Pong</title>
 </head>
 <body>
+    <header>
+        <h1 id="title"></h1>
+        <p id="description"></p>
+    </header>
+    <canvas id="board"></canvas>
+    <div id="score">
 
+    </div>
+    <footer>
+        <nav>
+            <a href="#">Go Up</a>
+            <a href="../../index.html">Retour menu</a>
+            <a href="../../about.html">About Us</a>
+        </nav>
+    </footer>
 </body>
 </html>
