--- a/games/single-pong/single-pong.html
+++ b/games/single-pong/single-pong.html
@@ -13,9 +13,8 @@
         <p id="description"></p>
     </header>
     <canvas id="board"></canvas>
-    <div id="score">
-
-    </div>
+    <p id="results"></p>
+    <button type="button" id="retry"></button>
     <footer>
         <nav>
             <a href="#">Go Up</a>
