add game in index

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         </div>
         <div class="game">
             <div class="game-title">
-                <p>Find The Button</p>
+                <p>Single Pong</p>
             </div>
             <div class="game-presentation">
-                <p>Click the button the most times in 15 seconds !</p>
+                <p>Your paddle and the ball in a bloody fight !</p>
             </div>
             <div class="game-button-parent">
-                <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';"><span>Play</span></button>
+                <button class="game-button" onclick="window.location.href='games/single-pong/single-pong.html';"><span>Play</span></button>
             </div>
         </div>
         <div class="game">
