add title and description in single pong

--- a/games/single-pong/single-pong.html
+++ b/games/single-pong/single-pong.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <header>
-        <h1 id="title"></h1>
-        <p id="description"></p>
+        <div>
+            <h1 id="title">Single Pong</h1>
+            <p id="description">Your paddle and the ball in a bloody fight !</p>
+        </div>
     </header>
     <canvas id="board"></canvas>
     <p id="results"></p>
