--- a/games/find-the-flag/find-the-flag.html
+++ b/games/find-the-flag/find-the-flag.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="find-the-flag.css">
+    <title>Find The Flag</title>
 </head>
 <body>
-
+    <header>
+        <h1></h1>
+        <p></p>
+    </header>
+    <main>
+        <img alt="" src="">
+        <label>
+            <input>
+        </label>
+        <button></button>
+    </main>
+    <footer>
+        <nav>
+            <a href="#">Go Up</a>
+            <a href="index.html">Retour menu</a>
+            <a href="about.html">About Us</a>
+        </nav>
+    </footer>
 </body>
 </html>
