--- a/games/find-the-flag/find-the-flag.html
+++ b/games/find-the-flag/find-the-flag.html
@@ -22,8 +22,8 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="index.html">Retour menu</a>
-            <a href="about.html">About Us</a>
+            <a href="../../index.html">Retour menu</a>
+            <a href="../../about.html">About Us</a>
         </nav>
     </footer>
 </body>
