add game over message

--- a/games/find-the-country/find-the-country.html
+++ b/games/find-the-country/find-the-country.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <img id="img" alt="" src="flags/138.png">
-        <div>
+        <div id="test">
             <label for="country">
                 <input type="text" id="country" name="country-name" placeholder="Country Name" autocomplete="off">
             </label>
@@ -25,6 +25,8 @@
             </div>
             <p id="submit-description">Click the "Submit" will confirm your answer.</p>
         </div>
+        <p id="results"></p>
+        <button type="button" id="retry"></button>
     </main>
     <footer>
         <nav>
