add the game in index

--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
                 <button class="game-button" onclick="window.location.href='games/find-the-button/find-the-button.html';"><span>Play</span></button>
             </div>
         </div>
+        <div class="game">
+            <div class="game-title">
+                <p>Find The Country</p>
+            </div>
+            <div class="game-presentation">
+                <p>Find the most countries !</p>
+            </div>
+            <div class="game-button-parent">
+                <button class="game-button" onclick="window.location.href='games/find-the-country/find-the-country.html';"><span>Play</span></button>
+            </div>
+        </div>
     </nav>
 
     <main class="suggestions-presentation">
