--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -9,24 +9,25 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Speed Typing</h1>
-            <p>Type the text speed as possible.</p>
-        </div>
-        <p id="chosen-text"></p>
+        <h1>Speed Typing</h1>
+        <p>Type the text speed as possible.</p>
     </header>
+
     <main>
+        <p id="chosen-text"></p>
         <form>
             <label for="typed-text"></label>
             <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
-            <br><br>
-            <button type="button" value="Submit" id="submit-button">Submit</button>
+            <div id="submit-button-parent">
+                <button type="button" value="Submit" id="submit-button">Submit</button>
+            </div>
         </form>
         <p id="submit-description">Click the "Submit" will confirm your answer.</p>
         <p id="results"></p>
         <button type="button" id="retry"></button>
         <button type="button" id="retry-same-text"></button>
     </main>
+
     <footer>
         <nav>
             <a href="#">Go Up</a>
