--- a/games/find-the-country/find-the-country.html
+++ b/games/find-the-country/find-the-country.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <header>
-        <div>
-            <h1>Find the Country</h1>
-            <p>Find the most countries</p>
-        </div>
+        <h1>Find the Country</h1>
+        <p>Find the most countries</p>
     </header>
+
     <main>
+        <p id="score">Coucou</p>
         <img id="img" alt="" src="flags/138.png">
-        <div id="test">
+        <div id="proposal">
             <label for="country">
                 <input type="text" id="country" name="country-name" placeholder="Country Name" autocomplete="off">
             </label>
-            <div>
+            <div id="submit-parent">
                 <button type="button" value="Submit" id="submit">Submit</button>
             </div>
             <p id="submit-description">Click the "Submit" will confirm your answer.</p>
@@ -28,6 +28,7 @@
         <p id="results"></p>
         <button type="button" id="retry"></button>
     </main>
+
     <footer>
         <nav>
             <a href="#">Go Up</a>
@@ -35,6 +36,6 @@
             <a href="../../about.html">About Us</a>
         </nav>
     </footer>
+    <script src="find-the-country.js"></script>
 </body>
-<script src="find-the-country.js"></script>
 </html>
