--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -18,11 +18,8 @@
         <form>
             <label for="typed-text"></label>
             <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
-            <div id="submit-button-parent">
-                <button type="button" value="Submit" id="submit-button">Submit</button>
-            </div>
         </form>
-        <p id="submit-description">Click the "Submit" will confirm your answer.</p>
+        <p id="submit-description">Type Key Enter will confirm your answer.</p>
         <p id="results"></p>
         <button type="button" id="retry"></button>
         <button type="button" id="retry-same-text"></button>
