clean single-pong

--- a/games/find-the-country/find-the-country.html
+++ b/games/find-the-country/find-the-country.html
@@ -14,7 +14,7 @@
     </header>
 
     <main>
-        <p id="score">Coucou</p>
+        <p id="score"></p>
         <img id="img" alt="" src="flags/138.png">
         <div id="proposal">
             <label for="country">
