--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="index.html">Retour menu</a>
+            <a href="index.html">Go Menu</a>
             <a href="about.html">About Us</a>
         </nav>
     </footer>
