add score in single pong

--- a/games/single-pong/single-pong.html
+++ b/games/single-pong/single-pong.html
@@ -13,6 +13,7 @@
         <p id="description">Your paddle and the ball in a bloody fight !</p>
     </header>
 
+    <p id="counter">Points : 0</p>
     <canvas id="board"></canvas>
     <p id="results"></p>
     <button type="button" id="retry"></button>
