add member-1 description

--- a/games/find-the-country/find-the-country.html
+++ b/games/find-the-country/find-the-country.html
@@ -21,7 +21,7 @@
                 <input type="text" id="country" name="country-name" placeholder="Country Name" autocomplete="off">
             </label>
         </div>
-        <p id="submit-description">Type Key Enter will confirm your answer.</p>
+        <p id="submit-description">Press the enter key will confirm your answer.</p>
         <p id="results"></p>
         <button type="button" id="retry"></button>
     </main>
