--- a/about.html
+++ b/about.html
@@ -15,7 +15,12 @@
     <main>
         <div id="member-1">
             <img id="member-1-picture" src="resources/member-1-picture.jpeg" alt="Member 1 Picture">
-            <p class="member-presentation">The male has the upper side wings a brilliant sky blue, with a fine black line round the edge and a white margin. The female is chocolate brown with a few blue scales near the base, and with orange spots, bordered by blue scales, around the edge of the hind wing. The fringes are chequered both sexes. The underside is brownish grey with black and orange crescent spots. The wingspan is about 3 cm (1.2 in).[1] The caterpillar reaches 1.6 centimetres (0.63 in) in length, has a dark green body with dark spines, and yellow bands along the back and sides. </p>
+            <p class="member-presentation">Within the framework of the realization of our website,
+                I contributed to the implementation of the home page and the installation of our form of suggestions of games,
+                as well as the creation of the dynamic table.
+                Moreover, I realized 3 games which are, Speed Typing, Single Pong and Find The Country.
+                Finally, I implemented the page you are currently on.</p>
+            <p class="member-name">Kylian Sauvée</p>
         </div>
         <div id="member-2">
             <img id="member-2-picture" src="resources/member-1-picture.jpeg" alt="Member 2 Picture">
