--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -19,7 +19,7 @@
             <label for="typed-text"></label>
             <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
         </form>
-        <p id="submit-description">Type Key Enter will confirm your answer.</p>
+        <p id="submit-description">Press the enter key will confirm your answer.</p>
         <p id="results"></p>
         <button type="button" id="retry"></button>
         <button type="button" id="retry-same-text"></button>
