--- a/games/single-pong/single-pong.html
+++ b/games/single-pong/single-pong.html
@@ -21,7 +21,7 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="../../index.html">Go Menu</a>
+            <a href="../../index.html">Go Home</a>
             <a href="../../about.html">About Us</a>
         </nav>
     </footer>
