--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="index.html">Go menu</a>
+            <a href="index.html">Go Home</a>
             <a href="about.html">About Us</a>
         </nav>
     </footer>
