--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="index.html">Go Menu</a>
+            <a href="index.html">Go Home</a>
             <a href="about.html">About Us</a>
         </nav>
     </footer>
