--- a/games/find-the-country/find-the-country.html
+++ b/games/find-the-country/find-the-country.html
@@ -29,7 +29,7 @@
     <footer>
         <nav>
             <a href="#">Go Up</a>
-            <a href="../../index.html">Go Menu</a>
+            <a href="../../index.html">Go Home</a>
             <a href="../../about.html">About Us</a>
         </nav>
     </footer>
