Finitions et addition du dernier jeu

--- a/games/speed-typing/speed-typing.html
+++ b/games/speed-typing/speed-typing.html
@@ -17,7 +17,7 @@
         <p id="chosen-text"></p>
         <form>
             <label for="typed-text"></label>
-            <textarea id="typed-text" name="typed-text" rows="10" cols="100"></textarea>
+            <textarea id="typed-text" name="typed-text"></textarea>
         </form>
         <p id="submit-description">Press the enter key will confirm your answer.</p>
         <p id="results"></p>
