--- a/about.html
+++ b/about.html
@@ -23,8 +23,15 @@
             <p class="member-name">Kylian Sauvée</p>
         </div>
         <div id="member-2">
-            <img id="member-2-picture" src="resources/member-1-picture.jpeg" alt="Member 2 Picture">
-            <p class="member-presentation">The male has the upper side wings a brilliant sky blue, with a fine black line round the edge and a white margin. The female is chocolate brown with a few blue scales near the base, and with orange spots, bordered by blue scales, around the edge of the hind wing. The fringes are chequered both sexes. The underside is brownish grey with black and orange crescent spots. The wingspan is about 3 cm (1.2 in).[1] The caterpillar reaches 1.6 centimetres (0.63 in) in length, has a dark green body with dark spines, and yellow bands along the back and sides. </p>
+            <img id="member-2-picture" src="https://media.lesechos.com/api/v1/images/view/607eeff8d286c2053b53fe86/1280x720/061856017971-web-tete.jpg" alt="Member 2 Picture">
+            <p class="member-presentation">During the creation of the website I was able to create 2 games : <br>
+                - find the word <br>
+                - find the button <br>
+                I also helped Kylian develop the main menu, and the suggestion form. 
+                I was also able to correct the responsive nature of the site and 
+                was able to correct some bugs, especially on games.</p>
+                
+            <p class="member-name">Oscar Vilmot</p>
         </div>
     </main>
 
